# storytel-tui

./: .gitignore  Cargo.toml  README.md
src/: client_storytel_api.rs  main.rs  mpv.rs  password_crypt.rs  storytel_types.rs  tui.rs
