[package]
name = "storytel-tui"
version = "0.1.0"
authors = ["javsanpar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mpv = "0.2"
openssl = { version = "0.10" }
cursive = { version = "0.14" , default-features = false, features = ["crossterm-backend"]}
